--- a/Lerning/OOP_step_77_ClassLibrary_CodeBaseClient/App.config
+++ b/Lerning/OOP_step_77_ClassLibrary_CodeBaseClient/App.config
@@ -6,7 +6,7 @@
   <runtime>
     <assemblyBinding xmlns ="urn:schemas-microsoft-com:asm.vl">
       <dependentAssembly>
-        <assemblyIdentity name ="CarLibrary" publicKeyToken ="" culture ="neutral">
+        <assemblyIdentity name="OOP_step_74_ClassLibrary_CarLibrary" publicKeyToken="33A2BC294331E8B9">
           <codeBase version="2.0.0.0" href="file:C:\Asm\OOP_step_74_ClassLibrary_CarLibrary.dll"/>
         </assemblyIdentity>
       </dependentAssembly>
