--- a/Lerning/OOP_step_86_SystemReflection_VehicleDescriptionAttributeReaderLateBinding/OOP_step_86_SystemReflection_VehicleDescriptionAttributeReaderLateBinding.csproj
+++ b/Lerning/OOP_step_86_SystemReflection_VehicleDescriptionAttributeReaderLateBinding/OOP_step_86_SystemReflection_VehicleDescriptionAttributeReaderLateBinding.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0DB8ACAA-805B-4704-9C06-0FEBC863E1EF}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OOP_step_84_SystemReflection_AttributedCarLibrary</RootNamespace>
-    <AssemblyName>OOP_step_84_SystemReflection_AttributedCarLibrary</AssemblyName>
+    <ProjectGuid>{D79DCD49-30CD-4020-B729-210545481B3E}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>OOP_step_86_SystemReflection_VehicleDescriptionAttributeReaderLateBinding</RootNamespace>
+    <AssemblyName>OOP_step_86_SystemReflection_VehicleDescriptionAttributeReaderLateBinding</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -41,8 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="VehicleDescriptionAttribute.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
