--- a/Lerning/OOP_step_129_ADO.NET_EF_AutoLotDAL/OOP_step_129_ADO.NET_EF_AutoLotDAL.csproj
+++ b/Lerning/OOP_step_129_ADO.NET_EF_AutoLotDAL/OOP_step_129_ADO.NET_EF_AutoLotDAL.csproj
@@ -71,6 +71,9 @@
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repos\BaseRepo.cs" />
+    <Compile Include="Repos\InventoryRepo.cs" />
+    <Compile Include="Repos\IRepo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
