OOP_step_130_WCF_MagicEightBallService
add:
+ clietn
+ edited Host

--- a/Lerning/OOP_step_130_WCF_MagicEightBallTCP/Host/OOP_step_130_WCF_MagicEightBallServiceHost.exe.config
+++ b/Lerning/OOP_step_130_WCF_MagicEightBallTCP/Host/OOP_step_130_WCF_MagicEightBallServiceHost.exe.config
@@ -2,16 +2,13 @@
 <configuration>
   <system.serviceModel>
     <services>
-      <service name="OOP_step_130_WCF_MagicEightBallServiceLib.MagicEightBallService" behaviorConfiguration="EightBallServiceMEXBehavior">
+      <service name="OOP_step_130_WCF_MagicEightBallServiceLib.MagicEightBallService">
         <endpoint address=""
-                  binding="basicHttpBinding"
+                  binding="netTcpBinding"
                   contract="OOP_step_130_WCF_MagicEightBallServiceLib.IEightBall"/>
-        <!--<endpoint address="mex"
-                  binding="mehHttpBinding"
-                  contract="IMetaDataExchange"/>-->
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8080/MagicEightBallService"/>
+            <add baseAddress="net.tcp://localhost:8090/MagicEightBallService"/>
           </baseAddresses>
         </host>
       </service>      
