--- a/Lerning/OOP_step_130_WCF_MagicEightBallServiceHost/OOP_step_130_WCF_MagicEightBallServiceHost.csproj
+++ b/Lerning/OOP_step_130_WCF_MagicEightBallServiceHost/OOP_step_130_WCF_MagicEightBallServiceHost.csproj
@@ -56,5 +56,8 @@
       <Name>OOP_step_130_WCF_MagicEightBallServiceLib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
