--- a/Lerning/OOP_step_130_WCF_MagicEightBallServiceClient/App.config
+++ b/Lerning/OOP_step_130_WCF_MagicEightBallServiceClient/App.config
@@ -8,11 +8,25 @@
             <basicHttpBinding>
                 <binding name="BasicHttpBinding_IEightBall" />
             </basicHttpBinding>
+            <netTcpBinding>
+                <binding name="NetTcpBinding_IEightBall">
+                    <security>
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
+            </netTcpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:8080/MagicEightBallService"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IEightBall"
                 contract="ServiceReference1.IEightBall" name="BasicHttpBinding_IEightBall" />
+            <endpoint address="net.tcp://localhost:8099/MagicEightBallService"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IEightBall"
+                contract="ServiceReference1.IEightBall" name="NetTcpBinding_IEightBall">
+                <identity>
+                    <userPrincipalName value="XARTDTX\artge" />
+                </identity>
+            </endpoint>
         </client>
     </system.serviceModel>
 </configuration>
