--- a/Lerning/OOP_step_130_WCF_MagicEightBallServiceHost/App.config
+++ b/Lerning/OOP_step_130_WCF_MagicEightBallServiceHost/App.config
@@ -2,26 +2,30 @@
 <configuration>
   <system.serviceModel>
     <services>
-      <service name="OOP_step_130_WCF_MagicEightBallServiceLib.MagicEightBallService" behaviorConfiguration="EightBallServiceMEXBehavior">
-        <endpoint address=""
-                  binding="basicHttpBinding"
-                  contract="OOP_step_130_WCF_MagicEightBallServiceLib.IEightBall"/>
-        <!--<endpoint address="mex"
-                  binding="mehHttpBinding"
-                  contract="IMetaDataExchange"/>-->
+      <service name="OOP_step_130_WCF_MagicEightBallServiceLib.MagicEightBallService">
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8080/MagicEightBallService"/>
+            <add baseAddress="net.tcp://localhost:8099/MagicEightBallService"/>
           </baseAddresses>
         </host>
       </service>      
     </services>
+    <bindings>
+      <basicHttpBinding>
+        <binding openTimeout="00:00:30"/>
+      </basicHttpBinding>
+      <netTcpBinding>
+        <binding closeTimeout="00:00:15"/>
+      </netTcpBinding>
+    </bindings>    
     <behaviors>
       <serviceBehaviors>
-        <behavior name="EightBallServiceMEXBehavior">
+        <behavior>
+          <!--Для получения стандартного MEX не именуйте элемент <serviceMetadata>-->
           <serviceMetadata httpGetEnabled="true"/>
         </behavior>
-      </serviceBehaviors>
+      </serviceBehaviors>      
     </behaviors>
   </system.serviceModel>
     <startup> 
