--- a/Lerning/ItterationsAndDicisions_step_7/PB_step_7_ItterationsAndDicisions.csproj
+++ b/Lerning/ItterationsAndDicisions_step_7/PB_step_7_ItterationsAndDicisions.csproj
@@ -8,10 +8,11 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>ItterationsAndDicisions_step_7</RootNamespace>
     <AssemblyName>ItterationsAndDicisions_step_7</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
