--- a/Lerning/OOP_Encapsulation_EmployeeApp_step_18/OOP_step_18_Encapsulation_EmployeeApp.csproj
+++ b/Lerning/OOP_Encapsulation_EmployeeApp_step_18/OOP_step_18_Encapsulation_EmployeeApp.csproj
@@ -8,10 +8,11 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>OOP_Encapsulation_EmployeeApp_step_18</RootNamespace>
     <AssemblyName>OOP_Encapsulation_EmployeeApp_step_18</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
