--- a/Lerning/OOP_SimpleUtilityClass_step_17/OOP_step_17_SimpleUtilityClass.csproj
+++ b/Lerning/OOP_SimpleUtilityClass_step_17/OOP_step_17_SimpleUtilityClass.csproj
@@ -8,10 +8,11 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>OOP_SimpleUtilityClass_step_17</RootNamespace>
     <AssemblyName>OOP_SimpleUtilityClass_step_17</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
