--- a/Lerning/OOP_step_28_SystemExeption_SimpleExeption/OOP_step_28_SystemExeption_SimpleExeption.csproj
+++ b/Lerning/OOP_step_28_SystemExeption_SimpleExeption/OOP_step_28_SystemExeption_SimpleExeption.csproj
@@ -8,10 +8,11 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>OOP_step_28_SystemExeption_SimpleExeption</RootNamespace>
     <AssemblyName>OOP_step_28_SystemExeption_SimpleExeption</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
