--- a/Lerning/RefTypeValTypeParams_Step_12/PB_step_12_RefTypeValTypeParams.csproj
+++ b/Lerning/RefTypeValTypeParams_Step_12/PB_step_12_RefTypeValTypeParams.csproj
@@ -8,10 +8,11 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>RefTypeValTypeParams_Step_12</RootNamespace>
     <AssemblyName>RefTypeValTypeParams_Step_12</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
