--- a/Lerning/OOP_step_137_WPF_WPFControlsAndAPIs/App.config
+++ b/Lerning/OOP_step_137_WPF_WPFControlsAndAPIs/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<connectionStrings>
+		<add name="AutoLotConnection" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=AutoLot;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+	</connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
