OOP_step_149_WPF_WpfNotifications.Models

--- a/Lerning/OOP_step_149_WPF_WpfNotifications/OOP_step_149_WPF_WpfNotifications.csproj
+++ b/Lerning/OOP_step_149_WPF_WpfNotifications/OOP_step_149_WPF_WpfNotifications.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Inventory.cs" />
+    <Compile Include="Models\InventoryManual.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -94,6 +95,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="PropertyChanged.Fody">
+      <Version>3.4.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
