--- a/Lerning/OOP_step_153_WPF_WpfMvvm/OOP_step_153_WPF_WpfMvvm/App.config
+++ b/Lerning/OOP_step_153_WPF_WpfMvvm/OOP_step_153_WPF_WpfMvvm/App.config
@@ -1,6 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<configuration>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<configuration>    
+  <configSections>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->      
+    </configSections>    
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+    <entityFramework>
+        <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+            <parameters>
+                <parameter value="mssqllocaldb" />
+            </parameters>
+        </defaultConnectionFactory>
+        <providers>
+            <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+        </providers>
+    </entityFramework>
+    <connectionStrings>
+        <add name="AutoLotConnection" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=AutoLot;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    </connectionStrings>
 </configuration>
